fix(style) - breadcrumb links not wrapping correctly

--- a/packages/styles/scss/components/_breadcrumb.scss
+++ b/packages/styles/scss/components/_breadcrumb.scss
@@ -51,6 +51,7 @@
 
       &--dropdown {
         font-family: $fonts-copy;
+        @include font-styles("body-xxs");
       }
     }
 
